# bm3dcl

./: CMakeLists.txt  LICENSE.txt  PGM.cpp  PGM.h  README.md  bm3d.cl  config_modified.h  dct.h  kuppi256.pgm  main.cpp  utils.cpp  utils.h
googletest-download/: CMakeLists.txt  CMakeLists.txt.in
res/: bm3d.cl  kuppi256_25.pgm
src/: config.h  haar.h
test/: CMakeLists.txt
